crates/cli/tests/snapshots/rustfs__rustfs_open_aliases_open_live_console_port.snap
---
source: crates/cli/tests/rustfs.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened RustFS console at http://127.0.0.1:<console_port>\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened RustFS console at http://127.0.0.1:<console_port>\n",
        stderr: "",
    },
    [
        "http://127.0.0.1:<console_port>",
        "http://127.0.0.1:<console_port>",
    ],
)
