crates/cli/tests/snapshots/rustfs__rustfs_open_does_not_open_stale_observed_runtime.snap
---
source: crates/cli/tests/rustfs.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "RustFS is not running for any linked Project\n",
    stderr: "",
}
